@startuml
class Human {

}
class AI {
    
}
class Player {

}

class Camera {

}

class Terrain {

}

package Managers {
    class InputManager {

    }

    class GameManager {

    }

    class TimeManager {

    }
}





class Unit {

}

Camera ..> InputManager

Human o--> Player
Human ..> InputManager
AI o--> Player

GameManager *--> Player
GameManager *--> Unit
GameManager *--> Terrain

Player o--> Unit

Unit ..> TimeManager
Unit ..> Terrain



@enduml